--- a/style.css
+++ b/style.css
@@ -7,6 +7,8 @@ position:fixed;
 width:99%;
 margin:0;
 top:0;
+
+
 }
 
 header
@@ -18,14 +20,18 @@ top:0;
 border:none;
 padding:0;
 margin:0;
+
 text-shadow: 5px 2px 9px blue;
 
 
 }
+
 .navigation{
     display: flex;
     flex-flow: row wrap;
     width: 100%;
+    
+    
 }
 ul {
     margin: 0;
@@ -40,7 +46,7 @@ li {
 @media (max-width:600px){
     .navigation{
         display: flex;
-        flex-flow: column wrap;
+        flex-flow: row wrap;
     }
 
 }
@@ -50,8 +56,14 @@ li a {
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
-    font-size: 17px;
+    font-size: 1.5vw;
     
+}
+@media (max-width:600px){
+    li a{
+        font-size: 3vw;
+    }
+
 }
 
 li a:hover {
@@ -100,10 +112,10 @@ footer
 .pic{
     width: 100%;
     height: 100%;
-    margin-top: 15%;
+    margin-top: 17%;
 }
 @media (max-width:600px){
     .pic{
-        margin-top: 54%;
+        margin-top: 22%
     }
 }
