--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@ html,body{
 }
 .ext
 {
+display: flex;
+flex-flow: column wrap;
 position:fixed;
 width:99%;
 margin:0;
@@ -24,6 +26,11 @@ margin:0;
 text-shadow: 5px 2px 9px blue;
 
 
+}
+header h1{
+    margin-top: 20px;
+    margin-bottom: 20px;
+    font-size: 5.2vw;
 }
 
 .navigation{
@@ -90,6 +97,10 @@ li a:hover {
   box-sizing: border-box;
   padding: 5px;
 }
+.child-container img{
+width: 100%;
+height:100%;
+}
 @media (max-width:600px){
     .flex-container{
         display: flex;
@@ -105,17 +116,20 @@ footer
     display: flex;
     flex-direction: column;
     color:white;
-    background-color: #333;
+    background: black;
+    text-align: center;
+    
 }
 
 
 .pic{
     width: 100%;
     height: 100%;
-    margin-top: 17%;
+    margin-top: 10%;
 }
+
 @media (max-width:600px){
     .pic{
-        margin-top: 22%
+        margin-top: 27%
     }
 }
