--- a/style.css
+++ b/style.css
@@ -1,45 +1,40 @@
-html,body{
+html, body {
     height: 100%;
-}
-.ext
-{
-display: flex;
-flex-flow: column wrap;
-position:fixed;
-width:99%;
-margin:0;
-top:0;
-
-
+    font-family: 'Roboto Condensed', sans-serif;
 }
 
-header
-{
-text-align: center;
-color:blue;
-background-color:white;
-top:0;
-border:none;
-padding:0;
-margin:0;
-
-text-shadow: 5px 2px 9px blue;
-
-
+.ext {
+    display: flex;
+    flex-flow: column wrap;
+    position: fixed;
+    width: 99%;
+    margin: 0;
+    top: 0;
 }
-header h1{
+
+header {
+    text-align: center;
+    color: blue;
+    background-color: white;
+    top: 0;
+    border: none;
+    padding: 0;
+    margin: 0;
+    /*text-shadow: 5px 2px 9px blue;*/
+}
+
+header h1 {
     margin-top: 20px;
     margin-bottom: 20px;
     font-size: 5.2vw;
 }
 
-.navigation{
+.navigation {
     display: flex;
     flex-flow: row wrap;
     width: 100%;
-    
-    
 }
+
 ul {
     margin: 0;
     padding: 0;
@@ -50,13 +45,7 @@ li {
     flex: 1;
     display: inline;
 }
-@media (max-width:600px){
-    .navigation{
-        display: flex;
-        flex-flow: row wrap;
-    }
 
-}
 li a {
     display: block;
     color: white;
@@ -64,72 +53,96 @@ li a {
     padding: 14px 16px;
     text-decoration: none;
     font-size: 1.5vw;
-    
-}
-@media (max-width:600px){
-    li a{
-        font-size: 3vw;
-    }
-
 }
 
 li a:hover {
     background-color: blue;
 }
-.flex-container {
-  display: flex;
-  flex-flow:row wrap; 
-  justify-content: baseline;
-  align-items: flex-end;
-  background-color: #f1f1f1;
-  margin:0,20px,20px,20px;
-  margin-top: 0px;
 
+/*main block*/
+
+.flex-container {
+    display: flex;
+    flex-flow: row wrap;
+
+    align-items: flex-start;
+    background-color: #f1f1f1;
+  
+    margin-top: 0px;
 }
+
+/*child block*/
 
 .child-container {
-  background-color: #f1f1f1;
-  width: 33%;
-  text-align: center;
-  line-height: 20px;
-  font-size: 15px;
-  font-family: 'Roboto Condensed', sans-serif;
-  box-sizing: border-box;
-  padding: 5px;
-}
-.child-container img{
-width: 100%;
-height:100%;
-}
-@media (max-width:600px){
-    .flex-container{
-        display: flex;
-        flex-flow: column wrap;
-    }
-    .child-container{
-        width: 100%;
-    }
+    background-color: #f1f1f1;
+    width: 33%;
+    text-align: center;
+    line-height: 20px;
+    font-size: 15px;
+    font-family: 'Roboto Condensed', sans-serif;
+    box-sizing: border-box;
+    padding: 5px;
 }
 
-footer
-{
+.child-container img {
+    width: 100%;
+    height: 100%;
+}
+
+footer {
     display: flex;
     flex-direction: column;
-    color:white;
+    color: white;
     background: black;
     text-align: center;
-    
 }
 
+footer ul {
+    background-color: black;
+}
 
-.pic{
+footer li {
+    flex: 1;
+    display: inline-block;
+}
+
+/* hero element*/
+
+.pic {
     width: 100%;
     height: 100%;
     margin-top: 10%;
 }
 
-@media (max-width:600px){
-    .pic{
-        margin-top: 27%
+/* media queries */
+
+@media (max-width:600px) {
+    .navigation {
+        display: flex;
+        flex-flow: row wrap;
+    }
+    li a {
+        font-size: 3vw;
+    }
+    .pic {
+        margin-top: 22%;
+    }
+    .flex-container {
+        display: flex;
+        flex-flow: column wrap;
+    }
+    .child-container {
+        width: 100%;
+    }
+    footer {
+        display: flex;
+        flex-direction: column;
+    }
+    .foot {
+        display: flex;
+        flex-direction: column;
+    }
+    .foot li {
+        flex: 1;
     }
 }
